# sos-analyzer

./: .gitignore  README.md  aggregate.sh  analyze_cluster.py  diff_reports.py  export.sh  generate_report.py  patch_layout.py  patch_report.py  patch_visuals.py  pyproject.toml  run_analysis.sh  setup.py
conf/: ignore_services.txt
lib/: common.sh
parsers/: parse_identity.sh  parse_logs.py  parse_logs.sh  parse_lustre.sh  parse_network.sh  parse_resources.sh  parse_rpms.sh  parse_services.sh  parse_sfa.sh  parse_sysctl.sh
sos_analyzer/: __init__.py  __main__.py  aggregate.py  cli.py  common.py  export.py  report.py
sos_analyzer/conf/: ignore_services.txt
sos_analyzer/parsers/: __init__.py  _logs_impl.py  exascaler.py  identity.py  logs.py  lustre.py  network.py  resources.py  rpms.py  services.py  sfa.py  sysctl.py
